fix whitespace bug footer on front page

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/templates/page/page.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/templates/page/page.scss
@@ -98,7 +98,8 @@
 	}
 
 	&__main {
-		@include fluid-props(margin-bottom, $size-medium, $grid-max-width-max, 60px, 90px);
+		@include fluid-props(padding-bottom, $size-medium, $grid-max-width-max, 60px, 90px);
+		background-color: $color-white; // needed for front (so the main campaign is not visible in the bottom padding)
 	}
 
 	/**
